gettingstarted additions with minor corrections

--- a/concepts/product/test/quality-tests.mdx
+++ b/concepts/product/test/quality-tests.mdx
@@ -27,14 +27,14 @@ The recommended file format for quality tests is JSON. Here's an example of the 
 
 ```json
 {
-  "questions": [
+  "inputs": [
     {
-      "question": "What is the capital of France?",
-      "ideal_answer": "Paris is the capital of France. It is located in the north-central part of the country on the Seine River."
+      "input": "What is the capital of France?",
+      "expected_answer": "Paris is the capital of France. It is located in the north-central part of the country on the Seine River."
     },
     {
-      "question": "What are three key provisions of the GDPR?",
-      "ideal_answer": "Three key provisions of the GDPR are: 1) The requirement for explicit consent before processing personal data, 2) The right of data subjects to access and delete their personal data, and 3) The requirement to report data breaches within 72 hours."
+      "input": "What are three key provisions of the GDPR?",
+      "expected_answer": "Three key provisions of the GDPR are: 1) The requirement for explicit consent before processing personal data, 2) The right of data subjects to access and delete their personal data, and 3) The requirement to report data breaches within 72 hours."
     }
   ]
 }
