--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,9 +14,15 @@ import MetricTypeCard from '/snippets/cards/metric-type-card.mdx';
 
 To get started with Galtea, you need to register your organization and create an account:
 
-<Card title="Register" icon="pen-to-square" href="/registration">
-  Register your organization into Galtea's platform
-</Card>
+<CardGroup cols={2}>
+  <Card title="Register" icon="pen-to-square" href="/registration">
+    Register your organization into Galtea's platform
+  </Card>
+  <Card title="Quickstart" icon="flag-checkered" href="/quickstart">
+    Get started with your evaluations
+  </Card>
+</CardGroup>
+
 
 ## Platform Access
 
