--- a/introduction.mdx
+++ b/introduction.mdx
@@ -15,10 +15,10 @@ import MetricTypeCard from '/snippets/cards/metric-type-card.mdx';
 To get started with Galtea, you need to register your organization and create an account:
 
 <CardGroup cols={2}>
-  <Card title="Register" icon="pen-to-square" href="/registration">
+  <Card title="Register" icon="user-plus" href="/registration">
     Register your organization into Galtea's platform
   </Card>
-  <Card title="Quickstart" icon="flag-checkered" href="/quickstart">
+  <Card title="Quickstart" icon="rocket" href="/quickstart">
     Get started with your evaluations
   </Card>
 </CardGroup>
