--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -8,6 +8,7 @@ import ProductCard from '/snippets/cards/product-card.mdx';
 import VersionCard from '/snippets/cards/version-card.mdx';
 import TestCard from '/snippets/cards/test-card.mdx';
 import EvaluationCard from '/snippets/cards/evaluation-card.mdx';
+import EvaluationTaskCard from '/snippets/cards/evaluation-task-card.mdx';
 import MetricTypeCard from '/snippets/cards/metric-type-card.mdx';
 
 This guide will walk you through the essential steps to begin evaluating and monitoring the reliability of your LLM-based products.
