add basic structure of SDK documentation

--- a/sdk/introduction.mdx
+++ b/sdk/introduction.mdx
@@ -1,8 +1,20 @@
 ---
 title: 'Introduction'
-description: 'SDK documentation'
+description: "Welcome to the Galtea SDK, a powerful toolkit that enables developers to integrate Galtea's AI evaluation capabilities directly into their workflows. Our SDK provides programmatic access to comprehensive testing, evaluation, and compliance features to improve AI reliability and accelerate development."
+icon: "play"
 ---
 
-<Note>
-  Currently WIP
-</Note>
+import SDKOverview from './overview.mdx';
+
+<SDKOverview />
+
+## Get Started
+
+<CardGroup cols={2}>
+  <Card title="Installation" icon="cube" href="/sdk/installation">
+    Learn how to install the SDK and set up your environment
+  </Card>
+  <Card title="Quickstart" icon="rocket" href="/sdk/quickstart">
+    Understand how to execute evaluations to monitor the reliability of your products
+  </Card>
+</CardGroup>
