Red Teaming Tests

--- a/concepts/product/test/quality-tests.mdx
+++ b/concepts/product/test/quality-tests.mdx
@@ -13,7 +13,7 @@ Quality tests in Galtea are designed to evaluate the quality, accuracy, and corr
 Quality tests have a specific structure designed to facilitate effective evaluation:
 
 <ResponseField name="instance_id" type="Integer" required>
-  A unique identifier for the test instance. **Example**: 0
+  A unique identifier for the test instance.
 </ResponseField>
 
 <ResponseField name="input" type="String" required>
