improve sdk documentation

--- a/sdk/introduction.mdx
+++ b/sdk/introduction.mdx
@@ -14,7 +14,7 @@ import SDKOverview from './overview.mdx';
   <Card title="Installation" icon="cube" href="/sdk/installation">
     Learn how to install the SDK and set up your environment
   </Card>
-  <Card title="Quickstart" icon="rocket" href="/sdk/quickstart">
+  <Card title="Usage" icon="Code" href="/sdk/usage">
     Understand how to execute evaluations to monitor the reliability of your products
   </Card>
 </CardGroup>
